--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -29,5 +31,17 @@
     "stylelint-order": "^4.1.0",
     "stylelint-order-config-standard": "^0.1.3",
     "typescript": "^4.3.5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pe4enko01/nextShop.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pe4enko01/nextShop/issues"
+  },
+  "homepage": "https://github.com/pe4enko01/nextShop#readme"
 }
